# krunner-linuxcommands

./: CMakeLists.txt  README.md  install.sh  linux_commands.cpp  linux_commands.h  plasma-runner-linuxcommands.desktop  uninstall.sh
config/: linux_commands_config.cpp  linux_commands_config.h  linux_commands_config.ui  plasma-runner-linuxcommands_config.desktop
